* Fixed some alignment and width issues in achievo_moderen. [Guido]

--- a/themes/achievo_modern/styles/recordlist.css
+++ b/themes/achievo_modern/styles/recordlist.css
@@ -4,11 +4,6 @@
   border: 0px solid #f00;
 }
 
-.atkmanytoonerelation, .recordList, .atkattribute
-{
-  width: 100%;
-}
-
 .recordListSearch
 {
   background: #666 ! important;
