--- a/themes/achievo_modern/styles/style.css
+++ b/themes/achievo_modern/styles/style.css
@@ -198,11 +198,6 @@ INPUT.btn_saveandclose
 
 /* editform styles */
 
-#editform
-{
-  width: 100%;
-}
-
 #editform td
 {
   padding-right: 12px;
